@startuml

package "ekspedisi.model" <<Folder>> {

    class DatabaseConfig {
        + getConnection() : Connection
        note : Load dari application.yml & .env\nKoneksi murni MariaDB Port 3306
    }

    package "entity" <<Folder>> {
        class User {
            - id : String
            - username : String
            - passwordHash : String
            - role : String
            - location : String
            + getId() : String
            + getRole() : String
            + getLocation() : String
        }

        class Paket {
            - resiId : String
            - senderName : String
            - originCity : String
            - receiverName : String
            - destinationCity : String
            - destinationAddress : String
            - weight : double
            - volume : double
            - typePaket : String
            - createdAt : LocalDateTime
        }

        class ShipmentLog {
            - logId : int
            - resiId : String
            - location : String
            - status : String
            - timestamp : LocalDateTime
            - userId : String
        }
    }

    package "dao" <<Folder>> {

        interface UserDAO <<Interface>> {
            + authenticate(username : String, pass : String) : User
            + getUserById(id : String) : User
            + insertUser(user : User) : boolean
            + updateUser(user : User) : boolean
            + deleteUser(userId : String) : boolean
        }

        interface PaketDAO <<Interface>> {
            + insertPaket(paket : Paket) : boolean
            + getPaketByResi(resiId : String) : Paket
        }

        interface TrackingDAO <<Interface>> {
            + insertLog(log : ShipmentLog) : boolean
            + getShipmentLogByResi(resiId : String) : List<ShipmentLog>
        }

        ' --- IMPLEMENTASI MARIA DB ---
        class UserDAOMariaDb {
            - logger : Logger
        }

        class PaketDAOMariaDb {
            - logger : Logger
        }

        class TrackingDAOMariaDb {
            - logger : Logger
        }
    }
}

' Relasi Implementasi (Realization)
UserDAO <|.. UserDAOMariaDb
PaketDAO <|.. PaketDAOMariaDb
TrackingDAO <|.. TrackingDAOMariaDb

' Relasi Database Config ke Implementasi DAO (Dependency)
DatabaseConfig <.. UserDAOMariaDb : <<uses>>
DatabaseConfig <.. PaketDAOMariaDb : <<uses>>
DatabaseConfig <.. TrackingDAOMariaDb : <<uses>>

' Relasi Interface DAO ke Entity (Dependency)
PaketDAO ..> Paket : <<manage>>
TrackingDAO ..> ShipmentLog : <<manage>>
UserDAO ..> User : <<manage>>

' Relasi antar Entity / Table
Paket "1" *-- "0..*" ShipmentLog : memiliki riwayat log >
User "1" -- "0..*" ShipmentLog : mencatat >

'Legenda
legend bottom center
      <b>Legend Visibilitas:</b>
      <color:red>🟥</color>  <b> - </b>  Private
      <color:blue>🔷</color>  <b> ~ </b>  Package Private
      <color:orange>🔶</color>  <b> # </b>  Protected
      <color:green>🟢</color>  <b> + </b>  Public
endlegend

@enduml